syntax="proto3";

option go_package = "generated/";

package gardenManagement;

service gardenManagement{
    rpc CreateGarden(CreateGardenRequest) returns (CreateGardenResponces);

    rpc ViewGarden(ViewGardenRequest) returns (ViewGardenResponces);

    rpc UpdateGarden(UpdateGardenRequest) returns (UpdateGardenResponces);

    rpc DeleteGarden(DeleteGardenRequest) returns (DeleteGardenResponces);

    rpc ViewUserGardens(ViewUserGardensRequest) returns (ViewUserGardensResponces);

    rpc AddPlanttoGarden(AddPlanttoGardenRequest) returns (AddPlanttoGardenResponces);

    rpc ViewGardenPlants(ViewGardenPlantsRequest) returns (ViewGardenPlantsResponces);

    rpc UpdatePlant(UpdatePlantRequest) returns (UpdatePlantResponces);

    rpc DeletePlant(DeletePlantRequest) returns (DeletePlantResponces);

    rpc AddPlantCareLog(AddPlantCareLogResquest) returns (AddPlantCareLogResponces);

    rpc ViewPlantCareLogs(ViewPlantCareLogsRequest) returns (ViewPlantCareLogsResponces);
}

// Yangi bog'ni yaratadi. Bog' haqida ma'lumotlarni qabul qiladi va yangi bog'ni ro'yxatga qo'shadi.

message CreateGardenRequest{
    string id=1;
    string userId=2;
    string name=3;
    float  area_sqm =4;
}

message CreateGardenResponces{
    bool success=1;
}

// Berilgan identifikator (ID) bo'yicha bog'ni qaytaradi. Ma'lum bir bog' haqida batafsil ma'lumot beradi.

message ViewGardenRequest{
    string id=1;
}

message ViewGardenResponces{
    string id=1;
    string userId=2;
    string name=3;
    float  area_sqm =4;
}

// Berilgan identifikator bo'yicha bog'ni yangilaydi. Bog'ning ma'lumotlarini yangilash uchun ishlatiladi.

message UpdateGardenRequest{
    string id=1;
    string userId=2;
    string name=3;
    string gardenType=4;
    float  area_sqm =5;
}

message UpdateGardenResponces{
    bool success=1;
}

// Berilgan identifikator bo'yicha bog'ni o'chiradi. Ma'lum bir bog'ni ro'yxatdan chiqaradi.

message DeleteGardenRequest{
    string id=1;
}

message DeleteGardenResponces{
    bool success=1;
}

// Berilgan foydalanuvchi identifikatori bo'yicha foydalanuvchining barcha bog'larini qaytaradi.

message ViewUserGardensRequest{
    string userId=1;
}

message ViewUserGardensResponces{
    repeated Garden gardens = 1;
}

message Garden{
    string id=1;
    string userId=2;
    string name=3;
    string gardenType=4;
    float  area_sqm =5;
}

// Berilgan bog' identifikatori bo'yicha yangi o'simlik qo'shadi. O'simlikni bog'ga qo'shadi.

message AddPlanttoGardenRequest{
    string id =1;
    string gardenId=2;
    string species=3;
    int32  quantity=4;
    string plantingDate=5;
    string plantStatus=6;
}

message AddPlanttoGardenResponces{
    bool success=1;
}

// Berilgan bog' identifikatori bo'yicha bog'dagi barcha o'simliklarni qaytaradi.

message ViewGardenPlantsRequest{
    string gardenId=1;
}

message ViewGardenPlantsResponces{
    repeated Plant plants=1;
}

message Plant{
    string id =1;
    string gardenId=2;
    string species=3;
    int32  quantity=4;
    string plantingDate=5;
    string plantStatus=6;
}

// Berilgan o'simlik identifikatori bo'yicha o'simlikni yangilaydi. O'simlik haqida ma'lumotlarni yangilash uchun ishlatiladi.

message UpdatePlantRequest{
    string id =1;
    string gardenId=2;
    string species=3;
    int32  quantity=4;
    string plantingDate=5;
    string plantStatus=6;
}

message UpdatePlantResponces{
    bool success=1;
}

// Berilgan o'simlik identifikatori bo'yicha o'simlikni o'chiradi. Ma'lum bir o'simlikni bog'dan chiqaradi.
message DeletePlantRequest{
    string id=1;
}

message DeletePlantResponces{
    bool success=1;
}

// Berilgan o'simlik identifikatori bo'yicha yangi parvarish yozuvi qo'shadi. O'simlik parvarishi haqida ma'lumot kiritadi.

message AddPlantCareLogResquest{
    string id =1;
    string palntId=2;
    string action=3;
    string notes=4;
}

message AddPlantCareLogResponces{
    bool success=1;
}

// Berilgan o'simlik identifikatori bo'yicha barcha parvarish yozuvlarini qaytaradi. O'simlikning parvarish tarixi haqida ma'lumot beradi.

message ViewPlantCareLogsRequest{
    string pslantId=1;
}

message ViewPlantCareLogsResponces{
    repeated CoreLog coreLogs=1;
}

message CoreLog{
    string id =1;
    string palntId=2;
    string action=3;
    string notes=4;
}